Start ripping out server stuff; fix blurry text

--- a/app/app.css
+++ b/app/app.css
@@ -74,9 +74,11 @@ textarea {
   left: 200%; /* position hidden blocks off the screen to allow the fancy transitions */
   width: calc(100% - 20px);
   height: 100%;
-  transition: 1s ease-in-out all;
+  transition: 1s ease-in-out left;
   overflow: auto;
   padding: 5px 10px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  backface-visibility: hidden;
 }
 
 .rel-container {
@@ -286,8 +288,6 @@ blockquote {
   max-width: 360px;
   background: #fff;
   z-index: 9;
-  box-shadow: 0 0 10px 0 #000;
-  transform: translateX(-105%);
   transition: 0.4s transform ease-out;
 }
 .menu h1 {
@@ -309,9 +309,6 @@ blockquote {
 .menu button:hover, .menu button:focus {
   background: #ccc;
 }
-.menu.shown {
-  transform: translateX(0);
-}
 .menu .appdata {
   position: fixed;
   left: 0;
@@ -321,7 +318,8 @@ blockquote {
 }
 
 .section {
-  display: none;
+  display: block;
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
@@ -333,7 +331,7 @@ blockquote {
   overflow-x: hidden;
 }
 .section.active {
-  display: block;
+  visibility: visible;
 }
 
 .section.noformat {
@@ -436,20 +434,20 @@ blockquote {
   .section {
     left: 360px;
     width: calc(100vw - 360px);
+    transform: translateZ(0) scale(1.0, 1.0);
+    -webkit-font-smoothing: subpixel-antialiased;
   }
   .block {
     top: 50%;
     border-radius: 30px 0;
     border: 1px solid #00c0ff;
-    /* box-shadow: 0 2px 4px #555; */
+    box-shadow: 0 2px 4px #555;
     width: 80%;
     height: 80%;
     transform: translate(-50%, -50%);
   }
   .block.shown {
-    width: calc(80% - 360px);
-    left: calc(50% + 180px);
-    top: 50%;
+    left: 50%;
   }
   .block.shown.done {
     left: -200%;
